# tg-bot-company-faq

./: .gitignore  Dockerfile  pyproject.toml
src/: config.py  globals.py  handlers.py  logs.py  main.py  streamlit_app.py
src/app/: app.py
src/crawler/: crawler.py  logic.py
src/openai_client/: client.py
src/tests/streamlit_test/: gather_info.py  streamlit_app.py
src/utils/: clean_markdown_contents.py  diff.py  logged_step.py  logged_token_usage.py  search_google.py  validate_url.py
tests/streamlit_test/: gather_info.py  streamlit_app.py
